# ToHostBridge

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  PRIVACY.md  README.md  STORE_SUBMISSION.md  SerialPort.cpp  SerialPort.h  ToHostBridge.msi  ToHostBridge.wxs  VirtualMidiPort.cpp  VirtualMidiPort.h  launch_url.vbs  main.cpp  make_msix.ps1  refactor.py  setup.ps1
docs/: index.html  style.css
include/winrt/: Microsoft.Windows.Devices.Midi2.Endpoints.BasicLoopback.h  Microsoft.Windows.Devices.Midi2.VirtualPatchBay.h  Microsoft.Windows.Devices.Midi2.h  winrt.ixx
include/winrt/impl/: Microsoft.Windows.Devices.Midi2.0.h  Microsoft.Windows.Devices.Midi2.1.h  Microsoft.Windows.Devices.Midi2.2.h  Microsoft.Windows.Devices.Midi2.Endpoints.BasicLoopback.0.h  Microsoft.Windows.Devices.Midi2.Endpoints.BasicLoopback.1.h  Microsoft.Windows.Devices.Midi2.Endpoints.BasicLoopback.2.h  Microsoft.Windows.Devices.Midi2.VirtualPatchBay.0.h  Microsoft.Windows.Devices.Midi2.VirtualPatchBay.1.h  Microsoft.Windows.Devices.Midi2.VirtualPatchBay.2.h
msix/: Package.appxmanifest
releases/: ToHostBridge.msi  ToHostBridge_v1.1.0_x64.msix
test_tool/: CMakeLists.txt  README.md  stress_test.cpp
tmp/: commit_msg.txt
